[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stewrd"
version = "1.0.0"
description = "Python SDK for the Stewrd Agent API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Stewrd", email = "team@stewrd.dev" }]
keywords = ["stewrd", "agent", "api", "sdk", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://stewrd.dev"
Documentation = "https://docs.stewrd.dev"
Repository = "https://github.com/dodenbach/stewrd-python"
Issues = "https://github.com/dodenbach/stewrd-python/issues"
